added many more features

--- a/index.html
+++ b/index.html
@@ -12,28 +12,46 @@
 </head>
 <body>
   <nav class="navbar">
-    <div class="name-title">
-      <h1>Benjamin <br>Sadek <br>Consulting</h1>
+    <div class="headers-container">
+      <div class="name-title">
+        <h1 id="name">Benjamin <br>Sadek</h1>
+        <h1 id="title">Consulting</h1>
+      </div>
+      <div class="tags">
+        <h2>Advocacy | Partnerships | Strategic Communications</h2>
+      </div>
     </div>
     <div class="nav-links">
-      <a href="#">Some Link</a>
-      <a href="#">Some Link</a>
-      <a href="#">Some Link</a>
-      <a href="#">Some Link</a>
-      <a href="#">Some Link</a>
+      <a href="#advocacy">Advocacy</a>
+      <a href="#">Partnerships</a>
+      <a href="#">Strategic Communications</a>
+      <a href="#">Portfolio</a>
     </div>
   </nav>
-  <div class="content-container">
-
+  <div class="banner">
+    <h3>"Some quote here would be nice" </h3>
   </div>
+  <div class="content-container">
+    <h2>About</h2>
+    <div class="about">
+      <p>A government relations, advocacy, and strategic communications specialist with ten years of experience working in international development and humanitarian affairs.</p>
+      <img src="https://media-exp1.licdn.com/dms/image/C4D03AQEswoq3Y_rWEQ/profile-displayphoto-shrink_800_800/0/1609360888271?e=1654128000&v=beta&t=oOVBsDWHXc26urwDL8aI7rCcZuqY4JJ6lkJBqWmt0uY" alt="picture of ben sadek.">
+    </div>
+    <hr id="advocacy">
+    <h2>Advocacy</h2>
+    <div class="advocacy-info">
+      <img src="https://c8.alamy.com/comp/K3HWN6/quality-2nd-generation-film-title-ali-g-inda-house-pictured-ali-g-K3HWN6.jpg" alt="My main man at no 10.">
+      <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+    </div>
+  </div>
+
+
   <div class="footer">
+    <h2>BS|Consulting</h2>
     <div class="footer-links">
       <a href="https://twitter.com/sadg01"><i class="fab fa-twitter-square"></i></a>
       <a href="https://www.linkedin.com/in/ben-s-83125361/"><i class="fab fa-linkedin"></i></a>
-      <a href="bsadekconsult@outlook.com"><i class="fas fa-envelope"></i></a>
-    </div>
-    <div class="footer-copyright">
-      This footer is made with <i class="fas fa-heart"></i> at Le Wagon
+      <a href="mailto:bsadekconsult@outlook.com"><i class="fas fa-envelope"></i></a>
     </div>
   </div>
 
